--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.2.3",
-    "@types/node": "18.14.6",
+    "@prisma/client": "^4.11.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
@@ -24,12 +24,15 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "spotify-web-api-js": "^1.5.2",
-    "three": "^0.150.1",
-    "typescript": "4.9.5"
+    "three": "^0.150.1"
   },
   "devDependencies": {
+    "@types/node": "^18.14.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "prisma": "^4.11.0",
+    "tailwindcss": "^3.2.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
