--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "file-loader": "^6.2.0",
     "flowbite": "^1.6.3",
     "framer-motion": "^10.0.2",
-    "next": "13.2.3",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -29,6 +28,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "next": "^13.4.19",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
